Add Pagination component

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -11,3 +11,8 @@
 .dropdownSection {
     padding-bottom: 23px;
 }
+
+.paginationSection {
+    text-align: center;
+    padding: 81px 0px 98px 0px;
+}
