--- a/src/components/Dropdown/styles.module.css
+++ b/src/components/Dropdown/styles.module.css
@@ -24,9 +24,12 @@
     border-width: 0 1px 1px 0;
     display: inline-block;
     padding: 3px;
-    transform: rotate(45deg);
     position: relative;
-    top: -2px;
+}
+
+.down {
+    transform: rotate(45deg);
+    bottom: 2px;
 }
 
 .optionsSelector {
