--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -12,6 +12,10 @@
     padding-bottom: 23px;
 }
 
+.newsSection {
+    min-height: 488px;
+}
+
 .paginationSection {
     text-align: center;
     padding: 81px 0px 98px 0px;
