--- a/src/components/SingleNews/styles.module.css
+++ b/src/components/SingleNews/styles.module.css
@@ -17,6 +17,23 @@
     overflow: auto;
 }
 
+.animation {
+    animation: shine-avatar 1.5s infinite linear;
+    background-image: linear-gradient(90deg, #f5f5f5 0px, #fff 100px,#f5f5f5 200px);
+    border-color: transparent;
+}
+
+.animation a, .animation div, .animation div svg {
+    background: transparent;
+    opacity: 0;
+}
+
+@keyframes shine-avatar {
+    0% { background-position: 25px;}
+    100% { background-position: 500px;}
+}
+
+
 .singleNews:hover {
     opacity: 0.5;
 }
@@ -31,6 +48,7 @@
 }
 
 .singleNewsContent {
+    width: 100%;
     padding: 14px 0px;
 }
 
@@ -63,4 +81,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
