--- a/src/components/Pagination/styles.module.css
+++ b/src/components/Pagination/styles.module.css
@@ -1,3 +1,9 @@
+button:disabled,
+button[disabled]{
+  opacity: 40%;
+  cursor: default;
+}
+
 .paginationButton {
     margin: 0px 4px;
     height: 32px;
@@ -9,7 +15,7 @@
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     line-height: 1.57;
-    color: rgba(0, 0, 0, 0.65);
+    color: #000000a6;
 }
 
 .activePaginationButton {
