--- a/src/components/News/styles.module.css
+++ b/src/components/News/styles.module.css
@@ -5,62 +5,10 @@
     height: 488px;
 }
 
-.singleNews {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 15px 0px;
-    min-height: 90px;
-    width: calc(50% - 20px);
-    border-radius: 6px;
-    border: solid 1px #acacac;
-    overflow: auto;
-}
+@media only screen and (max-width: 960px) {
+    
+    .newsContainer {
+        height: auto;
+    }
 
-.singleNews:hover {
-    opacity: 0.5;
-}
-
-.singleNewsContentContainer {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    height: 100%;
-    padding: 0px 26px;
-    width: calc(100% - 120px);
-}
-
-.singleNewsContent {
-    padding: 14px 0px;
-}
-
-.singleNewsContentPublished {
-    display: flex;
-    align-items: center;
-    padding-bottom: 6px;
-    color: #767676;
-    font-family: 'Roboto', sans-serif;
-    font-size: 11px;
-}
-
-.singleNewsClockIcon {
-    padding-right: 8px;
-} 
-
-.singleNewsContentText {
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.43;
-    letter-spacing: 0.25px;
-    color: #6b6b6b;
-}
-
-.favoriteContainer {
-    background: #f5f5f5;
-    height: 100%;
-    width: 68px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
