--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,6 +1,7 @@
 .body {
     margin: 0 auto;
     max-width: 1140px;
+    padding: 0px 30px;
 }
 
 .tabsSection {
@@ -17,12 +18,30 @@
     padding: 81px 0px 98px 0px;
 }
 
-/* Responsive - Mobile */
+/* Responsive - Medium screens */
 
-@media only screen and (max-width: 1366px) {
+@media only screen and (max-width: 1280px) {
 
     .body {
         padding: 0px 40px;
+    }
+
+}
+
+/* Responsive - Small screens */
+
+@media only screen and (max-width: 960px) {
+
+    .body {
+        padding: 96px 20px 0px;
+    }
+
+    .tabsSection {
+        padding: 35px 0px;
+    }
+
+    .paginationSection {
+        padding: 32px 0 64px;
     }
 
 }
