--- a/src/components/SingleNews/styles.module.css
+++ b/src/components/SingleNews/styles.module.css
@@ -11,6 +11,14 @@
     overflow: auto;
 }
 
+.left {
+    place-self: flex-start;
+}
+
+.right {
+    place-self: flex-end;
+}
+
 .animation {
     animation: shine-avatar 1.5s infinite linear;
     background-image: linear-gradient(90deg, #f5f5f5 0px, #fff 100px,#f5f5f5 200px);
