Add smooth scroll to top owhen clicking on pagination buttons

--- a/src/components/SingleNews/styles.module.css
+++ b/src/components/SingleNews/styles.module.css
@@ -96,4 +96,9 @@
         opacity: 1;
     }
 
+    .singleNewsContentContainer {
+        padding: 0px 15px;
+        width: calc(100% - 98px);
+    }
+
 }
