Add infinite scrolling logic to Pagination component

--- a/src/components/News/styles.module.css
+++ b/src/components/News/styles.module.css
@@ -1,14 +1,15 @@
 .newsContainer {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
-    height: 488px;
+    flex-direction: row;
+    height: auto;
+    justify-content: space-between
 }
 
 @media only screen and (max-width: 960px) {
     
     .newsContainer {
-        height: auto;
+        flex-direction: column;
     }
 
 }
